# E_learning

./: .gitignore  Docker-compose.yml  Dockerfile  README.md  pyproject.toml  run.sh
E_learning/: asgi.py  forms.py  settings.py  urls.py  views.py  vnpay.py  wsgi.py
E_learning/app/: admin.py  apps.py
E_learning/app/config/: cloudinary_config.py
E_learning/app/contants/: __init__.py  rate_limit.py  role_enum.py  status_enum.py
E_learning/app/migrations/: 0001_initial.py  0002_alter_enrollments_status.py  0003_alter_courses_introductor_id.py  0004_alter_courses_id.py  0005_alter_courses_introductor_id.py  0006_users_verify_code.py  0007_rename_users_user.py  0008_rename_user_users.py  0009_alter_users_is_active.py  0010_remove_process_lession_id_and_more.py  0011_courses_is_public_alter_users_role.py
E_learning/app/models/: __init__.py  assignments_models.py  certificates_models.py  courses_models.py  enrollments_models.py  grades_models.py  lessions_models.py  lessons_models.py  process_models.py  users_models.py
E_learning/app/security/: admin_permission.py  permission.py  role_permission.py
E_learning/app/serializers/: __init__.py  assignments_serializers.py  auth_serializers.py  courses_serializers.py  enrollments_serializers.py  lessions_serializers.py  lessons_serializers.py  token.py  users_serializers.py
E_learning/app/urls/: __init__.py  auth_urls.py  courses_urls.py  enrollments_urls.py  lesson_urls.py  users_urls.py
E_learning/app/utils/: __init__.py  send_mail.py  validate_email.py  verify_code.py
E_learning/app/views/: __init__.py  (+6 more)
