[tool.poetry]
name = "e-learning"
version = "0.1.0"
description = ""
authors = ["VIET-GITL <viet.info.43@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
django = "^5.1.2"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
